--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -40,6 +40,9 @@
                     <MudText Typo="Typo.body2">
                         Penalties are @(context.Item.Options.HasFlag(LeagueOptions.EnablePenalty) ? "enabled" : "disabled")
                     </MudText>
+                    <MudText Typo="Typo.body2">
+                        Fatalities are @(context.Item.Options.HasFlag(LeagueOptions.EnableFatality) ? "enabled" : "disabled")
+                    </MudText>
                 </MudPaper>
 
                 @if (context.Item.DevelopmentRanges != null)
