--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -66,7 +66,7 @@
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-2 mud-width-full">
                         <div class="d-flex flex-row gap-3 align-center pa-0" style="width:30%">
                             <CountryFlag Code="@Model.Country" />
-                            <MudText Typo="Typo.h5">@Model.Name - ROUND @Model.Round</MudText>
+                            <MudText Typo="Typo.h5" Class="overflow-hider">@Model.Name - ROUND @Model.Round</MudText>
                         </div>
 
                         <MudChip Color="@lapIndicatorColor" Label="true" DisableRipple="true">
