--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -31,7 +31,7 @@
                 <TemplateColumn T="SeasonListModel" Title="Leading driver">
                     <CellTemplate>
                         <MudStack Row="true" AlignItems="AlignItems.Center">
-                            <MudText>@context.Item.DriverName</MudText>
+                            <MudText Class="overflow-hider">@context.Item.DriverName</MudText>
                             <MudSpacer />
                             <CountryFlag Code="context.Item.DriverNationality" Size="FlagSize.Small" />
                         </MudStack>
@@ -45,7 +45,7 @@
                 <TemplateColumn T="SeasonListModel" Title="Leading team">
                     <CellTemplate>
                         <MudStack Row="true" AlignItems="AlignItems.Center">
-                            <MudText>@context.Item.TeamName</MudText>
+                            <MudText Class="overflow-hider">@context.Item.TeamName</MudText>
                             <MudSpacer />
                             <CountryFlag Code="context.Item.TeamNationality" Size="FlagSize.Small" />
                         </MudStack>
