A whole bunch of styling updates And also added some themes

--- a/SimTECH/SimTECH/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Components/SimProgressLinear.razor
@@ -2,26 +2,19 @@
     @foreach (var (bar, index) in Bars.Select((bar, index) => (bar, index)))
     {
         <span class="py-1 text-center" style="@(_barStyle(bar.Item1, bar.Item2))">
-            @if (AddIndicator)
+            @if (AddIndicator && (index % 2 == 0))
             {
-                <MudText Typo="Typo.h5" Style="font-size: 0.6rem">@(_indicatorText(1 + index))</MudText>
+                <MudText Typo="Typo.h5" Style="font-size: 0.75rem">@(_indicatorText(1 + index))</MudText>
             }
         </span>
     }
 </div>
 
 @code {
-    [Parameter, EditorRequired]
-    public List<(double, string)> Bars { get; set; }
-
-    [Parameter]
-    public bool AddIndicator { get; set; } = false;
-
-    [Parameter]
-    public int CalculationDistance { get; set; }
-
-    [Parameter]
-    public double TrackLength { get; set; }
+    [Parameter, EditorRequired] public List<(double, string)> Bars { get; set; }
+    [Parameter] public bool AddIndicator { get; set; } = false;
+    [Parameter] public int CalculationDistance { get; set; }
+    [Parameter] public double TrackLength { get; set; }
 
     private string _barStyle(double size, string colour)
     {
