--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -3,7 +3,7 @@
 @inject ManufacturerService ManufacturerService
 @inject IDialogService DialogService
 
-<PageTitle>Manufacturers</PageTitle>
+<PageTitle>Tyre suppliers</PageTitle>
 
 <MudContainer Class="mt-4">
     <MudPaper MinHeight="60px">
@@ -12,7 +12,7 @@
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
-        <MudText Color="Color.Info">These values do not apply when using wet tyres.</MudText>
+        <MudText Typo="Typo.body2" Color="Color.Info">These values do not apply when using wet tyres.</MudText>
     </MudPaper>
     <MudTable Items="@ManufacturerData" Bordered="true" Dense="true">
         <HeaderContent>
