--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -73,7 +73,7 @@
                             <MudText Typo="Typo.h5">LAP @(racedLaps) / @(totalLaps)</MudText>
                         </MudChip>
 
-                            <div class="d-flex flex-row-reverse align-center gap-3 pa-0" style="width: 30%">
+                        <div class="d-flex flex-row-reverse align-center gap-3 pa-0" style="width: 30%">
                             <MudIcon Icon="@Model.ClimateIcon" />
                             <MudText Typo="Typo.h5">@Model.Climate</MudText>
                         </div>
@@ -198,7 +198,7 @@
                 <SimProgressLinear Bars="@(Model.Occurrences.Select(e => ((NumberHelper.Percentage(1, calculationCount)), e.Value.SituationColour())).ToList())"
                                    AddIndicator="true" CalculationDistance="@calculationDistance" TrackLength="@Model.TrackLength" />
 
-                <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-4 py-2">
+                <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-4 pt-5 pb-2">
                     <MudText Typo="Typo.button">Legend</MudText>
                     <MudChip Icon="@IconCollection.HelmetOff" IconColor="Color.Error" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
                         Crash
