--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -6,6 +6,8 @@
 @inject IDialogService _dialogService
 @inject ISnackbar _snack
 
+<PageTitle>Raweceek</PageTitle>
+
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4" id="raceweek-container">
     @if (!loading)
     {
@@ -75,7 +77,7 @@
                             <MudTh>Grid</MudTh>
                             <MudTh Class="pa-0" Style="width: 5px"></MudTh>
                             <MudTh>Name</MudTh>
-                            <MudTh Class="number-col">No.</MudTh>
+                            <MudTh Class="number-col">NO.</MudTh>
                             <MudTh>Team</MudTh>
                             <MudTh Class="number-col">SUPP</MudTh>
                             <MudTh>Tyre</MudTh>
