--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -26,7 +26,7 @@
             <HierarchyColumn T="Driver" />
             <PropertyColumn Property="e => e!.FullName" Title="Name" />
             <PropertyColumn Property="e => e!.Abbreviation" Title="Tag" />
-            <PropertyColumn Property="e => e!.DateOfBirth" Title="DOB" Format="d" />
+            <PropertyColumn Property="e => e!.DateOfBirth" Title="Born in" Format="yyyy" />
             <TemplateColumn T="Driver" Title="Nation" SortBy="e => e.Country">
                 <CellTemplate>
                     <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" Reverse="true" />
@@ -34,9 +34,7 @@
             </TemplateColumn>
             <TemplateColumn T="Driver" Title="League" Sortable="false">
                 <CellTemplate>
-                    <MudText>
-                        @ReadActiveLeague(context.Item.Id)
-                    </MudText>
+                    <MudText>@ReadActiveLeague(context.Item.Id)</MudText>
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="Driver" Sortable="false">
@@ -53,14 +51,12 @@
             <MudStack Row="true">
                 <MudPaper>
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>State</MudText>
-                        <MudText Typo="Typo.button">@(context.Item.State)</MudText>
+                        <MudText>State is currently @(context.Item.State)</MudText>
                     </MudStack>
                 </MudPaper>
                 <MudPaper>
                     <MudStack AlignItems="AlignItems.Center">
-                        <MudText>Alive?</MudText>
-                        <MudText Typo="Typo.button">@(context.Item.Alive ? "Yes" : "No")</MudText>
+                        <MudText>Driver is @(context.Item.Alive ? "still alive" : "has died").</MudText>
                     </MudStack>
                 </MudPaper>
             </MudStack>
