--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -141,7 +141,7 @@ th {
 
 /* extensions on mudblazor css variables */
 .dialog-shadow {
-    box-shadow: var(--mud-palette-secondary) 0 0 2em;
+    box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
 }
 
 .extra-dense .mud-table-cell {
